--- a/style.css
+++ b/style.css
@@ -38,3 +38,28 @@
     background-color: white;
     font-size: 32px;
 }
+
+.play_button {
+    box-shadow: 0px 10px 14px -7px #3e7327;
+    background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
+    background-color:#77b55a;
+    border-radius:4px;
+    border:1px solid #4b8f29;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:24px;
+    font-weight:bold;
+    padding:11px 29px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #5b8a3c;
+}
+.play_button:hover {
+    background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+    background-color:#72b352;
+}
+.play_button:active {
+    position:relative;
+    top:1px;
+}
